--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,14 @@ dependencies:
     sdk: flutter
 
   flutter_riverpod: ^2.5.1
+  http: ^1.2.1
+
+  shared_preferences: ^2.2.3
+
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
